docs: README added

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="vaultre" android:host="agora-auth-staging" />
             </intent-filter>
+            <intent-filter >
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="vaultre" android:host="agora-auth" />
+            </intent-filter>
         </activity>
     </application>
 </manifest>
